# faucet-x1

./: .gitignore  README.md  start.sh
backend/: Cargo.toml
backend/src/: main.rs
frontend/: index.html
